--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -22,7 +22,9 @@
 <body>
 
 	<!-- Navigation -->
-	<div th:include="usuario/template_usuario.html::header"></div>
+	<div th:include="usuario/template_usuario.html::header" th:if="${sesion==null}"></div>
+
+	<div th:include="usuario/template_usuario.html::header-user" th:unless="${session==null}"></div>
 
 	<!-- Page Content -->
 	<div class="container">
@@ -59,7 +61,8 @@
 									<td th:text="${dorden.precio}"></td>
 									<td th:text="${dorden.cantidad}"></td>
 									<td th:text="${dorden.total}"></td>
-									<td><a th:href="@{/delete/cart/{id}  (id=${dorden.producto.id})}" class="btn btn-danger">Quitar</a></td>
+									<td><a th:href="@{/delete/cart/{id}  (id=${dorden.producto.id})}"
+											class="btn btn-danger">Quitar</a></td>
 								</tr>
 							</tbody>
 						</table>
