--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Spring eCommerce</title>
+	<title>Paraiso Shoes</title>
 
 
 	<!-- Bootstrap core CSS -->
@@ -25,7 +25,7 @@
 	<div th:fragment="header">
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 			<div class="container">
-				<a class="navbar-brand" th:href="@{/}">Spring eCommerce</a>
+				<a class="navbar-brand" th:href="@{/}">Paraíso Shoes</a>
 
 				<form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
 					<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search"
@@ -53,7 +53,7 @@
 			<div class="container">
 				<a class="navbar-brand" th:href="@{/}">Paraiso Shoes</a>
 	
-				<form class="form-inline my-2 my-lg-0" method="post" th:action="@{/usuario/search}">
+				<form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
 					<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search" name="nombre"
 						autocomplete="off">
 					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
