--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -4,7 +4,7 @@
 		<div class="container">
 			<a class="navbar-brand" th:href="@{/administrador}">Paraiso Shoes</a>
 
-			<form class="form-inline my-2 my-lg-0" method="post" action="#">
+			<form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
 				<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search" name="nombre"
 					autocomplete="off">
 				<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
@@ -23,6 +23,8 @@
 						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
 							<a class="dropdown-item" th:href="@{/productos}">Productos</a>
 							<a class="dropdown-item" th:href="@{/administrador/usuarios}">Usuarios</a>
+							<a class="dropdown-item" th:href="@{/usuario/compras}">Compras</a>
+							<a class="dropdown-item" th:href="@{/getCart}">Carrito</a>
 							<a class="dropdown-item" th:href="@{/usuario/cerrar}">Salir</a>
 						</div>
 					</li>
