--- a/src/main/resources/templates/usuario/productohome.html
+++ b/src/main/resources/templates/usuario/productohome.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Spring eCommerce</title>
+	<title>Paraíso Shoes</title>
 
 
 	<!-- Bootstrap core CSS -->
@@ -22,7 +22,19 @@
 <body>
 
 	<!-- Navigation -->
-	<div th:include="usuario/template_usuario.html::header"></div>
+	<div th:if="${session.idusuario == null}">
+		<div th:include="usuario/template_usuario.html::header"></div>
+	</div>
+
+	<div th:unless="${session.idusuario == null}">
+		<div th:if="${session.tipoUsuario == 'USER'}">
+			<div th:include="usuario/template_usuario.html::header-user"></div>
+		</div>
+
+		<div th:if="${session.tipoUsuario == 'ADMIN'}">
+			<div th:include="administrador/template_admin.html::header"></div>
+		</div>
+	</div>
 
 	<!-- Page Content -->
 	<div class="container">
@@ -30,7 +42,7 @@
 
 		<!-- Page Heading/Breadcrumbs -->
 		<h1 class="mt-4 mb-3">
-			Spring eCommerce <small>Producto</small>
+			Paraíso Shoes <small>Producto</small>
 		</h1>
 
 		<ol class="breadcrumb">
