--- a/src/main/resources/templates/usuario/resumenorden.html
+++ b/src/main/resources/templates/usuario/resumenorden.html
@@ -22,7 +22,19 @@
 <body>
 
 	<!-- Navigation -->
-	<div th:include="usuario/template_usuario.html::header"></div>
+	<div th:if="${session.idusuario == null}">
+		<div th:include="usuario/template_usuario.html::header"></div>
+	</div>
+
+	<div th:unless="${session.idusuario == null}">
+		<div th:if="${session.tipoUsuario == 'USER'}">
+			<div th:include="usuario/template_usuario.html::header-user"></div>
+		</div>
+
+		<div th:if="${session.tipoUsuario == 'ADMIN'}">
+			<div th:include="administrador/template_admin.html::header"></div>
+		</div>
+	</div>
 
 	<!-- Page Content -->
 	<div class="container">
@@ -68,7 +80,7 @@
 										<tr th:each="dtorden:${cart}">
 											<td th:text="${dtorden.nombre}"></td>
 											<td th:text="${dtorden.precio}"></td>
-											<td	th:text="${dtorden.cantidad}" ></td>
+											<td th:text="${dtorden.cantidad}"></td>
 											<td th:text="${dtorden.total}"></td>
 
 										</tr>
