--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Spring eCommerce</title>
+	<title>Paraíso Shoes</title>
 
 
 	<!-- Bootstrap core CSS -->
@@ -44,7 +44,7 @@
 
 		<!-- Page Heading/Breadcrumbs -->
 		<h1 class="mt-4 mb-3">
-			Spring eCommerce <small>Carrito</small>
+			Paraíso Shoes <small>Carrito</small>
 		</h1>
 
 		<ol class="breadcrumb">
