--- a/src/main/resources/templates/usuario/detallecompra.html
+++ b/src/main/resources/templates/usuario/detallecompra.html
@@ -42,7 +42,7 @@
 
 		<!-- Page Heading/Breadcrumbs -->
 		<h1 class="mt-4 mb-3">
-			Spring eCommerce <small>Detalles</small>
+			Paraíso Shoes <small>Detalles</small>
 		</h1>
 
 		<ol class="breadcrumb">
