--- a/src/main/resources/templates/usuario/login.html
+++ b/src/main/resources/templates/usuario/login.html
@@ -8,7 +8,7 @@
 	<meta name="description" content="">
 	<meta name="author" content="">
 
-	<title>Spring eCommerce</title>
+	<title>Paraíso Shoes</title>
 
 
 	<!-- Bootstrap core CSS -->
