--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -16,14 +16,14 @@
 
 	<!-- Custom styles for this template -->
 	<link th:href="@{css/heroic-features.css}" rel="stylesheet">
-
+	
 </head>
 
-<body>
+<body >
 
 	<!-- Navigation -->
 	<div th:fragment="header">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="background-color: #FFC0CB !important">
 			<div class="container">
 				<a class="navbar-brand" th:href="@{/}">Paraíso Shoes</a>
 
