--- a/src/main/resources/templates/usuario/login.html
+++ b/src/main/resources/templates/usuario/login.html
@@ -22,9 +22,9 @@
 <body>
 
 	<!-- Navigation -->
-	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="background-color: #FFC0CB !important">
 		<div class="container">
-			<a class="navbar-brand" th:href="@{/}">Paraíso Shoes</a>
+			<a class="navbar-brand" th:href="@{/}" style="color: #FFFFFF;background-color: #F52EE6;border-radius:5px">Paraíso Shoes</a>
 
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -34,7 +34,7 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" th:href="@{/usuario/login}">Login</a>
+						<a class="nav-link" th:href="@{/usuario/login}" style="color: #FFFFFF;background-color: #F52EE6;border-radius:5px">Login</a>
 					</li>
 				</ul>
 			</div>
