--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -47,9 +47,9 @@
 			Paraíso Shoes <small>Carrito</small>
 		</h1>
 
-		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-			<li class="breadcrumb-item active">Carrito</li>
+		<ol class="breadcrumb" style="background-color:#FFC0CB">
+			<li class="breadcrumb-item"><a th:href="@{/}" style="color:#000000">Home</a></li>
+			<li class="breadcrumb-item active" style="color:#000000">Carrito</li>
 		</ol>
 
 		<!-- Blog Post -->
@@ -87,7 +87,7 @@
 							<li class="list-group-item">
 								<h5 th:text="${orden.total}"></h5>
 							</li>
-							<a th:href="@{/order}" class="btn btn-dark">Ver Orden</a>
+							<a th:href="@{/order}" class="btn btn-dark" style="background-color:#25BD00">Ver Orden</a>
 						</ul>
 					</div>
 
