--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -58,12 +58,12 @@
 						<p class="card-text" th:text="${producto.nombre}"></p>
 					</div>
 					<div class="card-footer">
-						<a th:href="@{/productohome/{id} (id=${producto.id})}" class="btn btn-success">Ver producto</a>
+						<a th:href="@{/productohome/{id} (id=${producto.id})}" class="btn btn-success" style="background-color:#25BD00">Ver producto</a>
 					</div>
 				</div>
 			</div>
 
-		</div>
+		</div> 	
 		<!-- /.row -->
 
 	</div>
