--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -2,12 +2,12 @@
 <div th:fragment="header">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" 	style="background-color: #FFC0CB !important">
 		<div class="container">
-			<a class="navbar-brand" th:href="@{/administrador}" style="color: #FFFFFF;background-color: #F789EE;border-radius:5px">Paraiso Shoes</a>
+			<a class="navbar-brand" th:href="@{/administrador}" style="color: #FFFFFF;text-shadow:-1px -1px 0 black,1px -1px 0 black,-1px 1px 0 black,1px 1px 0 black">Paraiso Shoes</a>
 
 			<form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
 				<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search" name="nombre"
 					autocomplete="off">
-				<button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="border:3px solid green">Buscar</button>
+				<button class="btn btn-outline-success my-2 my-sm-0" type="submit" style="border:3px;background-color:#25BD00;color: #FFFFFF">Buscar</button>
 			</form>
 
 
@@ -19,8 +19,8 @@
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#"
 							id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
-							aria-expanded="false" style="background-color:#F789EE !important;border-radius:5px;color:white"> ADMIN </a>
-						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#DE2AC5 !important">
+							aria-expanded="false" style="color: #FFFFFF;text-shadow:-1px -1px 0 black,1px -1px 0 black,-1px 1px 0 black,1px 1px 0 black"> ADMIN </a>
+						<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#FFC0CB !important">
 							<a class="dropdown-item" th:href="@{/productos}">Productos</a>
 							<a class="dropdown-item" th:href="@{/administrador/usuarios}">Usuarios</a>
 							<a class="dropdown-item" th:href="@{/administrador/ordenes}">Ordenes</a>
@@ -36,9 +36,9 @@
 
 <!-- Footer -->
 <div th:fragment="footer">
-	<footer class="py-5 bg-dark">
-		<div class="container">
-			<p class="m-0 text-center text-white">Copyright &copy; Paraíso Shoes</p>
+	<footer class="py-5 bg-dark" style="background-color: #FFC0CB !important">
+		<div class="container" >
+			<p class="m-0 text-center text-white" style="font-size:3em;color: #FFFFFF;text-shadow:-1px -1px 0 black,1px -1px 0 black,-1px 1px 0 black,1px 1px 0 black">Paraíso Shoes</p>
 		</div>
 		<!-- /.container -->
 	</footer>
