--- a/src/main/resources/templates/usuario/compras.html
+++ b/src/main/resources/templates/usuario/compras.html
@@ -45,9 +45,9 @@
 			Paraíso Shoes <small>Compras</small>
 		</h1>
 
-		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-			<li class="breadcrumb-item active">Compras</li>
+		<ol class="breadcrumb" style="background-color:#FFC0CB">
+			<li class="breadcrumb-item"><a th:href="@{/}" style="color: #000000">Home</a></li>
+			<li class="breadcrumb-item active" style="color: #000000" >Compras</li>
 		</ol>
 
 		<!-- Blog Post -->
@@ -70,7 +70,7 @@
 									<td th:text="${orden.fechaCreacion}"></td>
 									<td th:text="${orden.total}"></td>
 									<td><a th:href="@{/usuario/detalle/{id} (id=${orden.id}) }"
-											class="btn btn-success">Ver Detalle</a></td>
+											class="btn btn-success" style="background-color:#25BD00">Ver Detalle</a></td>
 								</tr>
 							</tbody>
 						</table>
