--- a/src/main/resources/templates/usuario/detallecompra.html
+++ b/src/main/resources/templates/usuario/detallecompra.html
@@ -45,9 +45,9 @@
 			Paraíso Shoes <small>Detalles</small>
 		</h1>
 
-		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-			<li class="breadcrumb-item"><a th:href="@{/usuario/compras}">Compras</a></li>
+		<ol class="breadcrumb" style="background-color:#FFC0CB">
+			<li class="breadcrumb-item"><a th:href="@{/}" style="color: #000000">Home</a></li>
+			<li class="breadcrumb-item"><a th:href="@{/usuario/compras}" style="color: #000000">Compras</a></li>
 			<li class="breadcrumb-item active">Detalle de Compra</li>
 		</ol>
 
