--- a/src/main/resources/templates/usuario/login.html
+++ b/src/main/resources/templates/usuario/login.html
@@ -24,7 +24,7 @@
 	<!-- Navigation -->
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="background-color: #FFC0CB !important">
 		<div class="container">
-			<a class="navbar-brand" th:href="@{/}" style="color: #FFFFFF;background-color: #F52EE6;border-radius:5px">Paraíso Shoes</a>
+			<a class="navbar-brand" th:href="@{/}" style="color: #FFFFFF;text-shadow:-1px -1px 0 black,1px -1px 0 black,-1px 1px 0 black,1px 1px 0 black">Paraíso Shoes</a>
 
 
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
@@ -34,7 +34,7 @@
 			<div class="collapse navbar-collapse" id="navbarResponsive">
 				<ul class="navbar-nav ml-auto">
 					<li class="nav-item">
-						<a class="nav-link" th:href="@{/usuario/login}" style="color: #FFFFFF;background-color: #F52EE6;border-radius:5px">Login</a>
+						<a class="nav-link" th:href="@{/usuario/login}" style="color:#FFFFFF">Ingresar</a>
 					</li>
 				</ul>
 			</div>
@@ -43,45 +43,42 @@
 
 
 	<!-- Page Content -->
-	<div class="container">
+	<div class="container" style="max-width: 600px; margin-top: 50px;">
+        <div class="card mb-3" style="text-align: center; background-color: #fff; border: 1px solid #dee2e6; border-radius: 10px;">
+            <div class="row no-gutters">
+                <div class="col-md-4" style="background-color: #ffc0cb; border-radius: 10px 0 0 10px;">
+                </div>
+                <div class="col-md-8">
+                    <div class="card-body">
+                        <h2 style="color: #ff69b4;">Ingresar</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
 
-		<div class="card mb-3">
-			<div class="row no-gutters">
-				<div class="col-md-4">
-				</div>
-				<div class="col-md-8">
-					<div class="card-body">
-						<h2>Ingresar</h2>
+        <form th:action="@{/usuario/acceder}" method="post">
+            <div class="form-group">
+                <label for="email" style="color: #ff69b4;">Email:</label>
+                <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su email" required autocomplete="off" style="border: 1px solid #ff69b4; border-radius: 5px;">
+            </div>
 
-					</div>
-				</div>
-			</div>
-		</div>
+            <div class="form-group">
+                <label for="password" style="color: #ff69b4;">Contraseña:</label>
+                <input type="password" class="form-control" id="password" name="password" placeholder="Ingrese su contraseña" required style="border: 1px solid #ff69b4; border-radius: 5px;">
+            </div>
 
-
-		<form th:action="@{/usuario/acceder}" method="post">
-			<div class="form-group">
-				<label for="email"> Email: </label>
-				<input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su email" required
-					autocomplete="off">
-
-			</div>
-
-			<div class="form-group">
-				<label for="pwd"> Contraseña:</label>
-				<input type="password" class="form-control" id="password" name="password"
-					placeholder="Ingrese su contraseña" required>
-			</div>
-
-			<div class="form-group">
-				<div class="col-sm-2">
-					<button type="submit" class="btn btn-dark"> <span class="glyphicon glyphicon-ok"></span>
-						Ingresar</button>
-				</div>
-			</div>
-		</form>
-		<a th:href="@{/usuario/registro}" class="card-link">Si aún no tiene cuenta aqui puede registrarse</a>
-	</div>
+            <div class="form-group">
+                <div class="text-center">
+                    <button type="submit" class="btn btn-dark" style="background-color: #ff69b4; border-color: #ff69b4;">
+                        <span class="glyphicon glyphicon-ok" style="color: #fff;"></span> Ingresar
+                    </button>
+                </div>
+            </div>
+        </form>
+        <div class="text-center">
+            <a th:href="@{/usuario/registro}" class="card-link" style="color: #ff69b4">Si aún no tiene cuenta aquí puede registrarse</a>
+        </div>
+    </div>
 	<!-- /.container -->
 
 	<!-- Footer -->
