--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -22,9 +22,9 @@
 <body>
 
   <!-- Navigation -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" style="background-color: #FFC0CB !important">
     <div class="container">
-      <a class="navbar-brand" th:href="@{/}">Paraíso Shoes</a>
+      <a class="navbar-brand" th:href="@{/}" style="color: #FFFFFF;text-shadow:-1px -1px 0 black,1px -1px 0 black,-1px 1px 0 black,1px 1px 0 black">Paraíso Shoes</a>
 
 
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -33,7 +33,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" th:href="@{/usuario/login}">Login</a>
+            <a class="nav-link" th:href="@{/usuario/login}" style="color:#FFFFFF">Ingresar</a>
           </li>
         </ul>
       </div>    
@@ -42,48 +42,55 @@
 
 
  <!-- Page Content -->
-  <div class="container">
-
-    <div class="card mb-3">
+ <div class="container" style="max-width: 600px; margin-top: 50px;">
+  <div class="card mb-3" style="text-align: center; background-color: #fff; border: 1px solid #dee2e6; border-radius: 10px;">
       <div class="row no-gutters">
-        <div class="col-md-4"></div>
-        <div class="col-md-8">
-          <div class="card-body">
-            <h2>Registro</h2>
-
+          <div class="col-md-4" style="background-color: #ffc0cb; border-radius: 10px 0 0 10px;">
           </div>
-        </div>
+          <div class="col-md-8">
+              <div class="card-body">
+                  <h2 style="color: #ff69b4;">Registro</h2>
+              </div>
+          </div>
       </div>
-    </div>
-    <form th:action="@{/usuario/save}" method="post">
-      <div class="form-group">
-        <label for="nombres">Nombres:</label> <input type="text"
-          class="form-control" id="nombre" name="nombre" required
-          placeholder="Ingrese sus nombres" autocomplete="off">
-      </div>
-
-      <div class="form-group">
-        <label for="email">Email:</label> <input type="email"
-          class="form-control" id="email" name="email" required
-          placeholder="Ingrese su email" autocomplete="off">
-      </div>
-
-      <div class="form-group">
-        <label for="direccion">Dirección:</label> <input type="text"
-          class="form-control" id="direccion" name="direccion" required
-          placeholder="Ingrese su dirección" autocomplete="off">
-      </div>
-
-      <div class="form-group">
-        <label for="pwd">Contraseña</label> <input type="password"
-          class="form-control" id="password" name="password" required placeholder="Ingrese su contraseña" autocomplete="off">
-      </div>
-      <div class="col-sm-2">
-        <button type="submit" class="btn btn-success">Guardar</button>
-      </div>
-    </form>
-
   </div>
+
+  <form th:action="@{/usuario/save}" method="post">
+      <div class="form-group">
+          <label for="nombre" style="color: #ff69b4;">Nombres:</label>
+          <input type="text" class="form-control" id="nombre" name="nombre" required placeholder="Ingrese sus nombres" autocomplete="off" style="border: 1px solid #ff69b4; border-radius: 5px;">
+      </div>
+
+      <div class="form-group">
+          <label for="email" style="color: #ff69b4;">Email:</label>
+          <input type="email" class="form-control" id="email" name="email" required placeholder="Ingrese su email" autocomplete="off" style="border: 1px solid #ff69b4; border-radius: 5px;">
+      </div>
+
+      <div class="form-group">
+          <label for="telefono" style="color: #ff69b4;">Teléfono:</label>
+          <input type="text" class="form-control" id="telefono" name="telefono" required placeholder="Ingrese su teléfono" autocomplete="off" style="border: 1px solid #ff69b4; border-radius: 5px;">
+      </div>
+
+      <div class="form-group">
+          <label for="username" style="color: #ff69b4;">Nombre de usuario:</label>
+          <input type="text" class="form-control" id="username" name="username" required placeholder="Ingrese su nombre de usuario" autocomplete="off" style="border: 1px solid #ff69b4; border-radius: 5px;">
+      </div>
+
+      <div class="form-group">
+          <label for="direccion" style="color: #ff69b4;">Dirección:</label>
+          <input type="text" class="form-control" id="direccion" name="direccion" required placeholder="Ingrese su dirección" autocomplete="off" style="border: 1px solid #ff69b4; border-radius: 5px;">
+      </div>
+
+      <div class="form-group">
+          <label for="password" style="color: #ff69b4;">Contraseña:</label>
+          <input type="password" class="form-control" id="password" name="password" required placeholder="Ingrese su contraseña" autocomplete="off" style="border: 1px solid #ff69b4; border-radius: 5px;">
+      </div>
+
+      <div class="form-group text-center">
+          <button type="submit" class="btn btn-dark" style="background-color: #ff69b4; border-color: #ff69b4;">Guardar</button>
+      </div>
+  </form>
+</div>
 
   <!-- /.container -->
 
