--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -82,8 +82,8 @@
 	</div>
 
 	<!-- Footer -->
-	<div th:fragment="footer" style="background-color: #FFC0CB !important">
-		<footer class="py-5 bg-dark">
+	<div th:fragment="footer">
+		<footer class="py-5 bg-dark" style="background-color: #FFC0CB !important">
 			<div class="container">
 				<p class="m-0 text-center text-white" style="font-size:3em;color: #FFFFFF;text-shadow:-1px -1px 0 black,1px -1px 0 black,-1px 1px 0 black,1px 1px 0 black">Paraíso Shoes</p>
 			</div>
