--- a/src/main/resources/templates/administrador/ordenes.html
+++ b/src/main/resources/templates/administrador/ordenes.html
@@ -33,9 +33,9 @@
         Paraíso Shoes <small>Ordenes</small>
       </h1>
 
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-        <li class="breadcrumb-item active">Ordenes</li>
+      <ol class="breadcrumb" style="background-color: #FFC0CB !important">
+        <li class="breadcrumb-item"><a th:href="@{/}" style="color:#000000">Home</a></li>
+        <li class="breadcrumb-item active" style="color:#000000">Ordenes</li>
       </ol>
 
       <!-- Blog Post -->
@@ -49,6 +49,7 @@
                   <th scope="col">No. de Orden</th>
                   <th scope="col">Fecha</th>
                   <th scope="col">Valor</th>
+                  <th scope="col">Usuario</th>
                   <th scope="col">Acción</th>
                 </tr>
               </thead>
@@ -57,6 +58,7 @@
                   <td th:text="${orden.numero}"></td>
                   <td th:text="${orden.fechaCreacion}"></td>
                   <td th:text="${orden.total}"></td>
+                  <td th:text="${orden.usuario.nombre}"></td>
                   <td><a th:href="@{/administrador/detalle/{id}  (id=${orden.id}) }" class="btn btn-success">Ver Detalle</a></td>
                 </tr>
               </tbody>
