--- a/src/main/resources/templates/administrador/usuarios.html
+++ b/src/main/resources/templates/administrador/usuarios.html
@@ -33,23 +33,27 @@
 			Paraíso Shoes <small>Usuario</small>
 		</h1>
 
-		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-			<li class="breadcrumb-item active">Ver Usuarios</li>
+		<ol class="breadcrumb" style="background-color: #FFC0CB !important">
+			<li class="breadcrumb-item"><a th:href="@{/}" style="color:#000000">Home</a></li>
+			<li class="breadcrumb-item active" style="color:#000000">Ver Usuarios</li>
 		</ol>
 		<h2>Usuarios</h2>
 		<table class="table">
 			<thead>
-				<tr>
+				<tr style="text-align: center">
+					<th scope="col">Id</th>
 					<th scope="col">Nombre</th>
 					<th scope="col">Email</th>
+					<th scope="col">Telefono</th>
 					<th scope="col">Dirección</th>
 				</tr>
 			</thead>
 			<tbody>
-				<tr th:each="usuario:${usuarios}">
+				<tr th:each="usuario:${usuarios}" style="text-align: center">
+					<td th:text="${usuario.id}"></td>
 					<td th:text="${usuario.nombre}"></td>
 					<td th:text="${usuario.email}"></td>
+					<td th:text="${usuario.telefono}"></td>
 					<td th:text="${usuario.direccion}"></td>
 				</tr>
 			</tbody>
