me falta solo lo de seguridad, validacion al eliminar y eliminar si el producto está agotado o no hay mas

--- a/src/main/resources/templates/administrador/usuarios.html
+++ b/src/main/resources/templates/administrador/usuarios.html
@@ -34,7 +34,7 @@
 		</h1>
 
 		<ol class="breadcrumb" style="background-color: #FFC0CB !important">
-			<li class="breadcrumb-item"><a th:href="@{/}" style="color:#000000">Home</a></li>
+			<li class="breadcrumb-item"><a th:href="@{/}" style="color:#000000">Inicio</a></li>
 			<li class="breadcrumb-item active" style="color:#000000">Ver Usuarios</li>
 		</ol>
 		<h2>Usuarios</h2>
@@ -43,7 +43,7 @@
 				<tr style="text-align: center">
 					<th scope="col">Id</th>
 					<th scope="col">Nombre</th>
-					<th scope="col">Email</th>
+					<th scope="col">Correo</th>
 					<th scope="col">Telefono</th>
 					<th scope="col">Dirección</th>
 				</tr>
