--- a/src/main/resources/templates/usuario/login.html
+++ b/src/main/resources/templates/usuario/login.html
@@ -58,7 +58,7 @@
 
         <form th:action="@{/usuario/acceder}" method="post">
             <div class="form-group">
-                <label for="email" style="color: #ff69b4;">Email:</label>
+                <label for="email" style="color: #ff69b4;">Correo Electronico:</label>
                 <input type="email" class="form-control" id="email" name="email" placeholder="Ingrese su email" required autocomplete="off" style="border: 1px solid #ff69b4; border-radius: 5px;">
             </div>
 
