--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -41,7 +41,7 @@
 				<div class="collapse navbar-collapse" id="navbarResponsive">
 					<ul class="navbar-nav ml-auto">
 						<li class="nav-item"><a class="nav-link" th:href="@{/getCart}" style="color:#FFFFFF">Carrito</a></li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/usuario/login}" style="color:#FFFFFF">Login</a></li>
+						<li class="nav-item"><a class="nav-link" th:href="@{/usuario/login}" style="color:#FFFFFF">Ingresar</a></li>
 					</ul>
 				</div>
 			</div>
@@ -68,7 +68,7 @@
 					<ul class="navbar-nav ml-auto">	
 						<li class="nav-item dropdown"><a class="nav-link dropdown-toggle" href="#"
 								id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true"
-								aria-expanded="false" style="color: #FFFFFF;text-shadow:-1px -1px 0 black,1px -1px 0 black,-1px 1px 0 black,1px 1px 0 black"> USER </a>
+								aria-expanded="false" style="color: #FFFFFF;text-shadow:-1px -1px 0 black,1px -1px 0 black,-1px 1px 0 black,1px 1px 0 black"> USUARIO </a>
 							<div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink" style="background-color:#FFC0CB !important">
 								<a class="dropdown-item" th:href="@{/usuario/compras}">Compras</a>
 								<a class="dropdown-item" th:href="@{/getCart}">Carrito</a>
