--- a/src/main/resources/templates/administrador/ordenes.html
+++ b/src/main/resources/templates/administrador/ordenes.html
@@ -34,7 +34,7 @@
       </h1>
 
       <ol class="breadcrumb" style="background-color: #FFC0CB !important">
-        <li class="breadcrumb-item"><a th:href="@{/}" style="color:#000000">Home</a></li>
+        <li class="breadcrumb-item"><a th:href="@{/}" style="color:#000000">Inicio</a></li>
         <li class="breadcrumb-item active" style="color:#000000">Ordenes</li>
       </ol>
 
