--- a/src/main/resources/templates/productos/edit.html
+++ b/src/main/resources/templates/productos/edit.html
@@ -34,82 +34,84 @@
 			Paraíso Shoes <small>Productos</small>
 		</h1>
 
-		<ol class="breadcrumb">
-			<li class="breadcrumb-item"><a th:href="@{/}">Home</a></li>
-			<li class="breadcrumb-item active">Actualizar Producto</li>
+		<ol class="breadcrumb" style="background-color:#FFC0CB">
+			<li class="breadcrumb-item"><a th:href="@{/}" style="color:#000000">Inicio</a></li>
+			<li class="breadcrumb-item active" style="color:#000000">Actualizar Producto</li>
 		</ol>
 
-		<h2>Actualizar Producto</h2>
-		<form class="form-horizontal" th:action="@{/productos/update}" method="post" enctype="multipart/form-data">
-			<input type="hidden" name="id" th:value="${producto.id}">
-			
-			<div class="form-group">
-				<label class="control-label col-sm-2" for="nombre">Nombre:</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" id="nombre" name="nombre" th:value="${producto.nombre}"
-						placeholder="Ingrese el nombre del producto" required autocomplete="off">
-					<div id="prueba"></div>
-				</div>
-			</div>
-			<div class="form-group">
-				<label class="control-label col-sm-2" for="descripcion">Descripción:</label>
-				<div class="col-sm-10">
-					<textarea type="text" class="form-control" id="descripcion" name="descripcion"
-						placeholder="Ingrese la descripcion del producto" th:text="${producto.descripcion}" required
-						autocomplete="off"> </textarea>
-				</div>
-			</div>
+		<h2 style="color: #FF69B4;">Actualizar Producto</h2>
+<form class="form-horizontal" th:action="@{/productos/update}" method="post" enctype="multipart/form-data">
+    <input type="hidden" name="id" th:value="${producto.id}">
+    
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="nombre" style="color: #FF69B4;">Nombre:</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="nombre" name="nombre" th:value="${producto.nombre}"
+                   placeholder="Ingrese el nombre del producto" required autocomplete="off"
+                   style="border-color: #FF69B4;">
+        </div>
+    </div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="descripcion" style="color: #FF69B4;">Descripción:</label>
+        <div class="col-sm-10">
+            <textarea type="text" class="form-control" id="descripcion" name="descripcion"
+                      placeholder="Ingrese la descripción del producto" th:text="${producto.descripcion}" required
+                      autocomplete="off" style="border-color: #FF69B4;"></textarea>
+        </div>
+    </div>
 
-			<div class="form-group">
-				<label class="control-label col-sm-2" for="cantidad">Cantidad:</label>
-				<div class="col-sm-10">
-					<input type="number" class="form-control" id="cantidad" name="cantidad"
-						placeholder="Ingrese la cantidad del producto" th:value="${producto.cantidad}" required
-						autocomplete="off">
-				</div>
-			</div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="cantidad" style="color: #FF69B4;">Cantidad:</label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" id="cantidad" name="cantidad"
+                   placeholder="Ingrese la cantidad del producto" th:value="${producto.cantidad}" required
+                   autocomplete="off" style="border-color: #FF69B4;">
+        </div>
+    </div>
 
-			<div class="form-group">
-				<label class="control-label col-sm-2" for="color">Color:</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" id="color" name="color"
-						placeholder="Escriba el color del producto" th:value="${producto.color}" required
-						autocomplete="off">
-				</div>
-			</div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="color" style="color: #FF69B4;">Color:</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="color" name="color"
+                   placeholder="Escriba el color del producto" th:value="${producto.color}" required
+                   autocomplete="off" style="border-color: #FF69B4;">
+        </div>
+    </div>
 
-			<div class="form-group">
-				<label class="control-label col-sm-2" for="talla">Talla:</label>
-				<div class="col-sm-10">
-					<input type="text" class="form-control" id="talla" name="talla"
-						placeholder="Ingrese la talla del producto" th:value="${producto.talla}" required
-						autocomplete="off">
-				</div>
-			</div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="talla" style="color: #FF69B4;">Talla:</label>
+        <div class="col-sm-10">
+            <input type="text" class="form-control" id="talla" name="talla"
+                   placeholder="Ingrese la talla del producto" th:value="${producto.talla}" required
+                   autocomplete="off" style="border-color: #FF69B4;">
+        </div>
+    </div>
 
-			<div class="form-group">
-				<label class="control-label col-sm-2" for="precio">Precio:</label>
-				<div class="col-sm-10">
-					<input type="number" class="form-control" step="any" id="precio" name="precio"
-						placeholder="Ingrese el precio del producto" th:value="${producto.precio}" required
-						autocomplete="off">
-				</div>
-			</div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="precio" style="color: #FF69B4;">Precio:</label>
+        <div class="col-sm-10">
+            <input type="number" class="form-control" step="any" id="precio" name="precio"
+                   placeholder="Ingrese el precio del producto" th:value="${producto.precio}" required
+                   autocomplete="off" style="border-color: #FF69B4;">
+        </div>
+    </div>
 
-			<div class="form-group">
-				<label class="control-label col-sm-2" for="img">Imagen:</label>
-				<div class="col-sm-10">
-					<input type="file" class="form-control-file" id="img" name="img">
-				</div>
-			</div>
+    <div class="form-group">
+        <label class="control-label col-sm-2" for="img" style="color: #FF69B4;">Imagen:</label>
+        <div class="col-sm-10">
+            <input type="file" class="form-control-file" id="img" name="img" style="border-color: #FF69B4;">
+        </div>
+    </div>
 
-			<div class="row">
-				<div class="col-sm-2">
-					<button type="submit" class="btn btn-success"> Guardar</button>
-				</div>
-			</div>
+    <div class="row">
+        <div class="col-sm-2" >
+            <button type="submit" class="btn btn-success" style="background-color: #FF69B4;color:white"> Guardar</button>
+        </div>
+    </div>
 
-		</form>
+</form>
+
+
 
 	</div>
 	<!-- /.container -->
