--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -62,7 +62,7 @@
       </div>
 
       <div class="form-group">
-          <label for="email" style="color: #ff69b4;">Email:</label>
+          <label for="email" style="color: #ff69b4;">Correo Electronico:</label>
           <input type="email" class="form-control" id="email" name="email" required placeholder="Ingrese su email" autocomplete="off" style="border: 1px solid #ff69b4; border-radius: 5px;">
       </div>
 
