--- a/src/main/resources/templates/usuario/resumenorden.html
+++ b/src/main/resources/templates/usuario/resumenorden.html
@@ -46,7 +46,7 @@
 		</h1>
 
 		<ol class="breadcrumb" style="background-color:#FFC0CB">
-			<li class="breadcrumb-item"><a th:href="@{/}" style="color: #000000">Home</a></li>
+			<li class="breadcrumb-item"><a th:href="@{/}" style="color: #000000">Inicio</a></li>
 			<li class="breadcrumb-item active" style="color: #000000">Orden</li>
 		</ol>
 
