--- a/src/main/resources/templates/usuario/carrito.html
+++ b/src/main/resources/templates/usuario/carrito.html
@@ -48,7 +48,7 @@
 		</h1>
 
 		<ol class="breadcrumb" style="background-color:#FFC0CB">
-			<li class="breadcrumb-item"><a th:href="@{/}" style="color:#000000">Inicio</a></li>
+			<li class="breadcrumb-item"><a th:href="@{/}" style="color: #000000;text-shadow:-0.5px -0.5px 0 white,0.5px -0.5px 0 white,-0.5px 0.5px 0 white,0.5px 0.5px 0 white">Inicio</a></li>
 			<li class="breadcrumb-item active" style="color:#000000">Carrito</li>
 		</ol>
 
