--- a/src/main/resources/templates/administrador/detalleorden.html
+++ b/src/main/resources/templates/administrador/detalleorden.html
@@ -33,9 +33,9 @@
         Paraíso Shoes <small>Detalles</small>
       </h1>
 
-      <ol class="breadcrumb">
-        <li class="breadcrumb-item"><a th:href="@{/}">Inicio</a></li>
-        <li class="breadcrumb-item"><a th:href="@{/usuario/compras}">Compras</a></li>
+      <ol class="breadcrumb" style="background-color: #FFC0CB !important">
+        <li class="breadcrumb-item"><a th:href="@{/}" style="color: #000000;text-shadow:-0.5px -0.5px 0 white,0.5px -0.5px 0 white,-0.5px 0.5px 0 white,0.5px 0.5px 0 white">Inicio</a></li>
+        <li class="breadcrumb-item"><a th:href="@{/usuario/compras}" style="color: #000000;text-shadow:-0.5px -0.5px 0 white,0.5px -0.5px 0 white,-0.5px 0.5px 0 white,0.5px 0.5px 0 white">Compras</a></li>
         <li class="breadcrumb-item active">Detalle de Compra</li>
       </ol>
 
