--- a/src/main/resources/templates/administrador/ordenes.html
+++ b/src/main/resources/templates/administrador/ordenes.html
@@ -34,7 +34,7 @@
       </h1>
 
       <ol class="breadcrumb" style="background-color: #FFC0CB !important">
-        <li class="breadcrumb-item"><a th:href="@{/}" style="color:#000000">Inicio</a></li>
+        <li class="breadcrumb-item"><a th:href="@{/}" style="color: #000000;text-shadow:-0.5px -0.5px 0 white,0.5px -0.5px 0 white,-0.5px 0.5px 0 white,0.5px 0.5px 0 white">Inicio</a></li>
         <li class="breadcrumb-item active" style="color:#000000">Ordenes</li>
       </ol>
 
