--- a/src/main/resources/templates/productos/edit.html
+++ b/src/main/resources/templates/productos/edit.html
@@ -17,6 +17,12 @@
 	<!-- Custom styles for this template -->
 	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
 
+      <!-- Cargar jQuery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+<!-- Cargar SweetAlert -->
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
 </head>
 
 <body>
@@ -35,12 +41,12 @@
 		</h1>
 
 		<ol class="breadcrumb" style="background-color:#FFC0CB">
-			<li class="breadcrumb-item"><a th:href="@{/}" style="color:#000000">Inicio</a></li>
+			<li class="breadcrumb-item"><a th:href="@{/}" style="color: #000000;text-shadow:-0.5px -0.5px 0 white,0.5px -0.5px 0 white,-0.5px 0.5px 0 white,0.5px 0.5px 0 white">Inicio</a></li>
 			<li class="breadcrumb-item active" style="color:#000000">Actualizar Producto</li>
 		</ol>
 
 		<h2 style="color: #FF69B4;">Actualizar Producto</h2>
-<form class="form-horizontal" th:action="@{/productos/update}" method="post" enctype="multipart/form-data">
+<form id="editarProductoForm" class="form-horizontal" th:action="@{/productos/update}" method="post" enctype="multipart/form-data">
     <input type="hidden" name="id" th:value="${producto.id}">
     
     <div class="form-group">
@@ -105,12 +111,29 @@
 
     <div class="row">
         <div class="col-sm-2" >
-            <button type="submit" class="btn btn-success" style="background-color: #FF69B4;color:white"> Guardar</button>
+            <button type="button" class="btn btn-success" style="background-color: #FF69B4;color:white" onclick="confirmarEdicion()"> Guardar</button>
         </div>
     </div>
 
 </form>
-
+<script>
+    function confirmarEdicion() {
+        swal({
+            title: "¿Estás seguro de guardar los cambios?",
+            icon: "warning",
+            buttons: true,
+            dangerMode: true,
+        })
+        .then((OK) => {
+            if (OK) {
+                // Enviar el formulario
+                document.getElementById("editarProductoForm").submit();
+            } else {
+                swal("¡Los cambios no han sido guardados!");
+            }
+        });
+    }
+</script>
 
 
 	</div>
