--- a/src/main/resources/templates/usuario/detallecompra.html
+++ b/src/main/resources/templates/usuario/detallecompra.html
@@ -46,8 +46,8 @@
 		</h1>
 
 		<ol class="breadcrumb" style="background-color:#FFC0CB">
-			<li class="breadcrumb-item"><a th:href="@{/}" style="color: #000000">Inicio</a></li>
-			<li class="breadcrumb-item"><a th:href="@{/usuario/compras}" style="color: #000000">Compras</a></li>
+			<li class="breadcrumb-item"><a th:href="@{/}" style="color: #000000;text-shadow:-0.5px -0.5px 0 white,0.5px -0.5px 0 white,-0.5px 0.5px 0 white,0.5px 0.5px 0 white">Inicio</a></li>
+			<li class="breadcrumb-item"><a th:href="@{/usuario/compras}" style="color: #000000;text-shadow:-0.5px -0.5px 0 white,0.5px -0.5px 0 white,-0.5px 0.5px 0 white,0.5px 0.5px 0 white">Compras</a></li>
 			<li class="breadcrumb-item active">Detalle de Compra</li>
 		</ol>
 
