--- a/src/main/resources/templates/usuario/registro.html
+++ b/src/main/resources/templates/usuario/registro.html
@@ -16,7 +16,6 @@
 
 	<!-- Custom styles for this template -->
 	<link th:href="@{/css/heroic-features.css}" rel="stylesheet">
-
 </head>
 
 <body>
@@ -87,7 +86,7 @@
       </div>
 
       <div class="form-group text-center">
-          <button type="submit" class="btn btn-dark" style="background-color: #ff69b4; border-color: #ff69b4;">Guardar</button>
+          <button type="submit" class="btn btn-dark" style="background-color: #ff69b4; border-color: #ff69b4">Guardar</button>
       </div>
   </form>
 </div>
@@ -100,7 +99,5 @@
 	<!-- Bootstrap core JavaScript -->
 	<script th:src="@{/vendor/jquery/jquery.min.js}"></script>
 	<script th:src="@{/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-
 </body>
-
 </html>
